--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,29 @@
  *= require_tree .
  *= require_self
  */
+*{
+  box-sizing: border-box;
+}
+#guess-box{
+  border: 2px solid;
+  border-color: #FFFF00;
+  width: 30px;
+  height: 30px;
+  visibility: hidden;
+  background-color: #333;
+  opacity: 0.4;
+  position: absolute;
+}
+#guesses{
+   position: absolute;
+   visibility: hidden;
+   opacity: 0.7;
+   background-color: #000;
+   width: 150px;
+   color: #FFF;
+   padding: 5px;
+}
+
+.game{
+  position: relative;
+}
