--- a/app/views/photo_tag_game/show.html.erb
+++ b/app/views/photo_tag_game/show.html.erb
@@ -1,16 +1,21 @@
 <div class="container">
 
-  <div class="game">
+  <div class="game" >
     <%= image_tag @photo_name, id: "photo_tag_game_img", data: 
-                              { characters: @characters } %>
+                                  { characters: @characters, 
+                                    photo_name: @photo_name,
+                                    key: @key } %>
     <div id="guess-box"></div>
-    <div id="guesses">guess 1<br/>guess 2</div>
+    <div id="guesses"></div>
   </div>
 
-  <div id="high-scores">
+  <div id="status">
+    <div id="high-scores">
       <div id="timer">Time: 00:00</div>
       <h3>High Scores:</h3>
-        <%= render partial: '/high_score/high_score', collection: @highScores %>
+      <%= render partial: '/high_score/high_score', collection: @highScores %>
     </div>
+    <div id="guess-feedback"><h2>No Guesses</h2></div>
+  </div>
 </div>
 
