--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,6 +54,12 @@
  padding: 10px 0;
  font-size: 20px;
 }
+#characters-legend{
+  text-align: center;
+}
+.found{
+  color: #00AA00;
+}
 
 #guess-feedback{
   float: left;
@@ -76,4 +82,16 @@
 
 .score{
   text-align: right;
+}
+
+#high-score-form{
+  visibility: hidden;
+  width: 30%;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #337733;
+  border-radius: 5px;
+  border: 1px solid;
+  border-color: #FFFF00;
+  padding: 10px;
 }
